--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-    <link rel="stylesheet" href="'/css/main.css' | relative_url">
+    <link rel="stylesheet" href="{{ '/css/main.css' | relative_url }}">
   </head>
   <body class="w3-black">
     <main class="w3-padding-32 w3-container" id="main">
